Display Inbox for Current User

--- a/message/src/main/resources/application.yml
+++ b/message/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 server:
   port: 8082
+spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://idp:9999/auth/realms/demo
