--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=9090
+logging.level.root=DEBUG
 logging.level.org.springframework.cloud.gateway=TRACE
 management.endpoints.web.exposure.include=*
-
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://idp:9999/auth/realms/demo
