--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -2,9 +2,8 @@
 server:
   port: 8081
 
-spring:
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: http://idp:9999/auth/realms/demo
+logging:
+  level:
+    org:
+      springframework:
+        web: DEBUG
